Rename package and update application identifiers to reflect "Gradient Clock"

--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,5 +1,5 @@
 {
-  "appId": "com.reymelin.HOURue",
-  "appName": "HOURue - Clock Face",
+  "appId": "com.reymelin.gradientclock",
+  "appName": "Gradient Clock",
   "webDir": "www"
 }
